fix(home): Adjust margin-bottom of header container for improved spacing

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: var(--space-6);
+    margin-bottom: var(--space-4);
   }
 
   &__header__description {
